tests/invalid/Native_Invalid_1.whiley

native function f(int x) -> int

native function f(int[] x) -> int
